[Hurray] Done removing material-ui + every dependencies updated + bundle analytics

--- a/web-app/src/index.css
+++ b/web-app/src/index.css
@@ -8,3 +8,12 @@ body {
 * {
   box-sizing: border-box;
 }
+
+.icon {
+  color: inherit;
+  display: inline-block;
+  fill: currentcolor;
+  height: 24px;
+  width: 24px;
+  user-select: none;
+}
