Working virtualized list

--- a/web-app/src/index.css
+++ b/web-app/src/index.css
@@ -5,6 +5,13 @@ body {
   font-family: Roboto, sans-serif;
 }
 
+html,
+body,
+#root,
+#app {
+  height: 100%;
+}
+
 * {
   box-sizing: border-box;
 }
